# sinagram-Django

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
messenger/: admin.py  consumers.py  forms.py  models.py  urls.py  views.py
messenger/migrations/: 0001_initial.py
messenger/static/css/: styles.css
messenger/templates/Base/: base.html
messenger/templates/Home/: main_page.html
messenger/templates/Partials/: footer.html
messenger/templates/forms/: add_contact_page.html  change_account_info.html  change_contact_info.html  change_info_page.html  delete_contact_form.html  delete_user_form.html  login_page.html  logout_page.html  signup_page.html
messenger/templates/messenger_pages/: contact_chat_page.html  contact_detail.html  contact_list.html  panel.html
sinagram/: asgi.py  routing.py  settings.py  urls.py  utils.py  views.py  wsgi.py
static/css/: styles.css
static/javascript/: script.js
templates/Partials/: footer.html  navbar.html
templates/base/: base.html
templates/home/: index.html
templates/messenger/: contact_chat_page.html
templates/partials/: navbar.html
templates/users/: add_contact_page.html  change_account_info.html  change_contact_info.html  contact_detail.html  contact_list.html  create_profile.html  delete_contact_form.html  delete_user_form.html  login_page.html  logout_page.html  panel.html  signup_page.html
users/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
