[tool.poetry]
name = "sinagram-django"
version = "0.1.0"
description = "a minimal messenger like telegram!"
authors = ["sinasezza <s.e.sezza121@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
colorclass = "2.2.2"
django = "5.0.3"
docopt = "0.6.2"
idna = "3.6"
packaging = "23.2"
pillow = "10.2.0"
pip-upgrade = "0.0.6"
pip-upgrader = "1.4.15"
psycopg2 = "2.9.9"
requests = "2.31.0"
sqlparse = "0.4.4"
terminaltables = "3.1.10"
tzdata = "2023.4"
urllib3 = "2.2.0"
poetry-plugin-export = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
